# blog

basic_lua_embedding/: CMakeLists.txt  calculator.lua  example.lua  main.cpp
basic_lua_embedding/cmake/: FindLua.cmake
csharp_bindings/: CSharpBindings.cpp  Engine.i  gen.bat  main.cpp
embedding_lua/: CMakeLists.txt  Component.h  Engine.h  Engine.i  EngineLua.cpp  Entity.h  TransformationComponent.h  example.lua  gen.bat  main.cpp
embedding_mono/: CMakeLists.txt  Entity.cs  main.cpp
hardhat/: package-lock.json
hardhat-erc20/: hardhat.config.ts  package-lock.json  package.json
hardhat-erc20/contracts/: TutorialToken.sol
hardhat-erc20/scripts/: deploy.ts
hardhat-erc20/test/: TutorialToken.test.ts
mono_generics/: CMakeLists.txt  TestClass.cs  edit.cpp  main.cpp
react-ether/: package-lock.json  package.json
react-ether/pages/: _app.tsx  _document.js  index.tsx
springboot-observability/: README.md
springboot-observability/docker-compose/: docker-compose.yml
springboot-observability/docker-compose/otel-collector/: config.yml
springboot-observability/inventory-application/: pom.xml
springboot-observability/inventory-application/src/main/java/com/example/inventory/: InventoryApplication.java
springboot-observability/inventory-application/src/main/java/com/example/inventory/data/: ItemRepository.java
springboot-observability/inventory-application/src/main/resources/: application.yml
springboot-observability/inventory/src/main/java/com/example/inventory/: InventoryApplication.java
springboot-observability/inventory/src/main/resources/: application.yml  data.sql
(+3 files in other folders)
